# twitter_clone

./: .env  Cargo.toml  README.md  tweets.db
src/: main.rs  tweet.rs
static/: api.js  index.html  styles.css
templates/: index.html  styles.css
