[package]
name = "twitter_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
env_logger = "0.10.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
tokio = { version = "1.34.0", features = ["full"], optional = true }
dotenvy = "0.15.7"
askama = "0.12.1"
actix-files = "0.6.2"