[package]
name = "twitter_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
env_logger = "0.10.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15.7"
actix-files = "0.6.2"
v_htmlescape = "0.15.8"